rewrite benefits of the OLED screen

--- a/src/content/blog/corne-keyboard/index.mdx
+++ b/src/content/blog/corne-keyboard/index.mdx
@@ -460,8 +460,15 @@ And the result is very good. The quality is much, much better than another shop.
 
 - Some switches popped out from the hotswap socket sometimes when I put it in my backpack, which is a typical issue for a keyboard with hotswap sockets.
 - There are now 2 cables I always have to carry instead of 1: TRRS and USB cables, which is cumbersome. A wireless build would get rid of this issue.
-- The OLED display module is kind of useless for me. It looks cool but there's no other benefits yet. And I learned later that it is optional.
-  - Same goes to the LEDs lights. They are also optional.
+- The OLED module and LEDs lights are optional.
+- ~The OLED display module is kind of useless for me~ I take it back. It is helpful when there's problem. I recently has an issue that the keyboard stops working. The OLED screen shows weird graphic so I know something's not right.
+  <Picture
+    src={import('./images/weird-graphic-oled-screen.jpg')}
+    alt="Weird graphics shown the OLED screen. Something is not right."
+    widths={[400,800]}
+    aspectRatio={1}
+    width={400}
+  />
 - Getting each part separately rather than buying a set seems to be a cheaper option. From [Rafael's shopping list](https://github.com/rafaeldelboni/buildlogs/blob/main/crkbd-v3.md#part-list-original) it seems everything can be purchased from AliExpress.
 - I didn't socket the controller and the OLED modules as mentioned earlier.
 - I should have asked for quotes for multiple 3D printing services before deciding to choose one.
