arrange the intro

--- a/src/content/blog/corne-keyboard/th/index.mdx
+++ b/src/content/blog/corne-keyboard/th/index.mdx
@@ -13,33 +13,37 @@ categories:
 - Life
 ---
 
-Corne เป็น mechanical split keyboard ตัวแรกของของผมครับ
-ตอนนี้ก็ใช้งานเป็นตัวหลักด้วย (ซึ่งงานหลักคือ เขียน code / document / chat กับเพื่อน) โพสต์นี้อยากจะเล่าถึงที่มาที่ไป และประสบการณ์ที่ได้จากการทำและลองใช้งานคีย์บอร์ดตัวนี้ครับ
+Corne เป็น mechanical split keyboard ตัวแรกที่ผมได้ลองทำและลองใช้งานครับ
+โพสต์นี้อยากจะเล่าถึงที่มาที่ไป และประสบการณ์ที่ได้จากการทำ และลองใช้งานคีย์บอร์ดตัวนี้ในชีวิตประจำวันครับ
 
-> โพสต์นี้ถือว่าเป็นภาคเสริมของโพสต์ Building Corne - a Mechanical Split Keyboard ซึ่งเป็นบันทึกเวอร์ชั่นภาษาอังกฤษของคีย์บอร์ดตัวนี้
-เนื้อหาอาจจะไม่เหมือนกันซะทีเดียวนะครับ ส่วนตัวแล้วอยากเพิ่มเติมในสิ่งที่ไม่ได้เล่าในโพสต์แรกครับผม
+> โพสต์นี้ถือว่าเป็นภาคเสริมของโพสต์ [Building Corne - a Mechanical Split Keyboard](https://armno.in.th/blog/corne-keyboard/) ซึ่งเป็นบันทึกเวอร์ชั่นภาษาอังกฤษของคีย์บอร์ดตัวนี้
+เนื้อหาอาจจะไม่เหมือนกันซะทีเดียว โพสต์นี้อยากเพิ่มเติมในสิ่งที่ไม่ได้เล่าในโพสต์แรกครับผม
 
-ส่วนตัวผมเองนั้น ตั้งแต่เริ่มทำ mechanical keyboard มาก็พยายามยึดกับขนาดที่ 60% หรือ 65% มาตลอด
+ส่วนตัวผมเองตั้งแต่เริ่มทำ mechanical keyboard มาก็พยายามยึดกับขนาดที่ 60% หรือ 65% มาตลอด
 เป็น size ที่พอดีสำหรับผม ดูไม่เทอะทะเกินจำเป็น และใช้งานได้จริง
-keyboard ที่ใช้งานตัวล่าสุดคือ Ginkgo65 / Portico แล้วก็ DIY 60% ทั่วไป
-ทุกตัวที่ผมทำ จะใช้งานเป็น keyboard ตัวหลัก (daily driver)
-ใช้งานจริงจังเสมอครับ
+
+keyboard ที่ใช้งานตัวล่าสุดคือ Ginkgo65 / Portico แล้วก็ Tofu 60% ทั่วไป
+ทุกตัวที่ผมทำ จะมีเป้าหมายเพื่อใช้งานเป็น keyboard ตัวหลัก (daily driver)
+และใช้งานจริงจังเสมอจนกว่าจะเปลี่ยนตัวใหม่ครับ
+
+งานหลักในแต่ละวันของผมคือ เขียน code / เขียน document / chat กับเพื่อนร่วมงานตอนทำงานครับ
 
 ## ทำไมต้อง split keyboard
 
-Split keyboard ตามที่ผมเข้าใจ คือคีย์บอร์ดที่ข้างซ้ายกับข้างขวาแยกกันชัดเจนครับ
+[Split keyboard](https://github.com/diimdeep/awesome-split-keyboards) ตามที่ผมเข้าใจ คือคีย์บอร์ดที่แยกข้างซ้ายกับข้างขวาแยกกันชัดเจนครับ
 จุดประสงค์ก็คือ ทำให้สามารถจัดวางคีย์บอร์ดฝั่งซ้ายและขวาในลักษณะต่างๆ ตามใจชอบ
 และให้เข้ากับสรีระของเราได้มากขึ้นครับ มือซ้าย-ขวาจะห่างกันเท่าไหร่
 หรือจะเอียงเท่าไหร่ก็แล้วแต่เราจะจัดวางครับ
 
-จริงๆ split keyboard มีเยอะมากกกก https://github.com/diimdeep/awesome-split-keyboards เกือบทั้งหมดผมไม่รู้จักหรือไม่เคยได้ยินชื่อเลย ส่วนตัวผมเองก่อนหน้านี้ไม่ค่อยอินกับ split keyboard เท่าไหร่ เพราะรู้สึกว่ารูปร่างมันประหลาด
-น่าจะใช้งานยาก คิดว่าคงไม่เหมาะกับตัวเอง และไม่คิดว่าผมจะใช้ split keyboard ได้เลยด้วยซ้ำ
+ก่อนหน้านี้ไม่ค่อยอินกับ split keyboard เท่าไหร่ รู้สึกว่ารูปร่างมันประหลาด
+น่าจะใช้งานยาก คิดว่าคงไม่เหมาะกับตัวเอง ไม่คิดว่าผมจะใช้ split keyboard ได้เลยด้วยซ้ำ
 
-แต่แล้วอะไรสักอย่างก็พาไปเจอกับ video **[How to build a handwired keyboard](https://www.youtube.com/watch?v=hjml-K-pV4E)** ของคุณ Joe Scotto
-ซึ่งผมก็กดเข้าไปดู video อื่นๆ ของช่องเขา และทำให้ได้รู้จัก split keyboard ที่ชื่อว่า Corne ครับ
-สะดุดตากับความมินิมอล และสงสัยว่ามันจะทำยากไหม เลยอยากลองทำดูครับ (จะใช้งานได้หรือไม่ได้ เดี๋ยวค่อยว่ากัน แต่อยากลองทำ)
+แต่แล้วอะไรสักอย่างก็พาไปเจอกับ video [**How to build a handwired keyboard**](https://www.youtube.com/watch?v=hjml-K-pV4E) ของคุณ Joe Scotto
+ซึ่งผมก็กดเข้าไปดู video อื่นๆ ในช่อง YouTube ของเขา และทำให้ได้รู้จัก split keyboard ที่ชื่อว่า Corne ครับ
 
-อีกอย่างที่สำคัญ ไม่ต้องปวดหัวกับ stabilizer ด้วยครับ
+ผมสะดุดตากับความมินิมอล และในอีกมุมหนึ่งก็สงสัยว่ามันจะทำยากไหม เลยอยากลองทำดูครับ (จะใช้งานได้หรือไม่ได้ เดี๋ยวค่อยว่ากัน แต่อยากลองทำ)
+
+อีกอย่างที่สำคัญ ดูแล้วมันน่าจะเป็น mechanical keyboard ตัวแรก ที่ผมไม่ต้องปวดหัวกับ stabilizer ด้วยครับ
 
 ### หาของ
 
