--- a/src/content/blog/corne-keyboard/th/index.mdx
+++ b/src/content/blog/corne-keyboard/th/index.mdx
@@ -18,7 +18,7 @@ import { Picture, Image } from '@astrojs/image/components';
 Corne เป็น mechanical split keyboard ตัวแรกที่ผมได้ลองทำและลองใช้งานครับ
 โพสต์นี้อยากจะเล่าถึงที่มาที่ไป และประสบการณ์ที่ได้จากการทำ และลองใช้งานคีย์บอร์ดตัวนี้ในชีวิตประจำวันครับ
 
-> โพสต์นี้ถือว่าเป็นภาคเสริมของโพสต์ [Building Corne - a Mechanical Split Keyboard](https://armno.in.th/blog/corne-keyboard/) ซึ่งเป็นบันทึกเวอร์ชั่นภาษาอังกฤษของคีย์บอร์ดตัวนี้
+> โพสต์นี้ถือว่าเป็นภาคแยกของโพสต์ [Building Corne - a Mechanical Split Keyboard](https://armno.in.th/blog/corne-keyboard/) ซึ่งเป็นบันทึกเวอร์ชั่นภาษาอังกฤษของคีย์บอร์ดตัวนี้
 เนื้อหาอาจจะไม่เหมือนกันซะทีเดียว โพสต์นี้อยากเพิ่มเติมในสิ่งที่ไม่ได้เล่าในโพสต์แรกครับผม
 
 ส่วนตัวผมเองตั้งแต่เริ่มทำ mechanical keyboard มาก็พยายามยึดกับขนาดที่ 60% หรือ 65% มาตลอด
