--- a/src/content/blog/corne-keyboard/index.mdx
+++ b/src/content/blog/corne-keyboard/index.mdx
@@ -5,11 +5,12 @@ pubDate: '2023-06-16T15:26:42.937Z'
 thumbnail: /images/corne-keyboard/post-thumbnail.jpg
 description: Notes from building my mechnical split keyboard - The Corne (crkbd) v3. This post covers the process of building this keyboard, and what I have learned along the way.
 tags:
-- Mechanical Keyboards
+- Mechanical Keyboard
 - DIY
 - Side Projects
 categories:
 - Life
+- hobby
 ---
 
 import { Picture, Image } from '@astrojs/image/components';
