--- a/src/content/blog/corne-keyboard/th/index.mdx
+++ b/src/content/blog/corne-keyboard/th/index.mdx
@@ -6,50 +6,54 @@ thumbnail: /images/corne-keyboard/post-thumbnail.jpg
 description: บันทึกการทำ Corne (crkbd) keyboard ซึ่งเป็น mechanical split keyboard ตัวแรกของผมครับ
 slug: corne-keyboard--th
 tags:
-- Mechanical Keyboards
+- Mechanical Keyboard
 - DIY
 - Side Projects
+- Hardware
 categories:
 - Life
+- hobby
 ---
 
 import { Picture, Image } from '@astrojs/image/components';
 
 Corne เป็น mechanical split keyboard ตัวแรกที่ผมได้ลองทำและลองใช้งานครับ
-โพสต์นี้อยากจะเล่าถึงที่มาที่ไป และประสบการณ์ที่ได้จากการทำ และลองใช้งานคีย์บอร์ดตัวนี้ในชีวิตประจำวันครับ
+โพสต์นี้อยากจะเล่าถึงที่มาที่ไป และประสบการณ์ที่ได้จากการทำ และลองใช้งาน keyboard ตัวนี้ในชีวิตประจำวันครับ
 
-> โพสต์นี้ถือว่าเป็นภาคแยกของโพสต์ [Building Corne - a Mechanical Split Keyboard](https://armno.in.th/blog/corne-keyboard/) ซึ่งเป็นบันทึกเวอร์ชั่นภาษาอังกฤษของคีย์บอร์ดตัวนี้
+> โพสต์นี้ถือว่าเป็นภาคแยกของโพสต์ [Building Corne - a Mechanical Split Keyboard](https://armno.in.th/blog/corne-keyboard/) ซึ่งเป็นบันทึกเวอร์ชั่นภาษาอังกฤษของ keyboard ตัวนี้
 เนื้อหาอาจจะไม่เหมือนกันซะทีเดียว โพสต์นี้อยากเพิ่มเติมในสิ่งที่ไม่ได้เล่าในโพสต์แรกครับผม
 
 ส่วนตัวผมเองตั้งแต่เริ่มทำ mechanical keyboard มาก็พยายามยึดกับขนาดที่ 60% หรือ 65% มาตลอด
-เป็น size ที่พอดีสำหรับผม ดูไม่เทอะทะเกินจำเป็น และใช้งานได้จริง
+เป็น size ที่พอดีสำหรับผม ดูไม่เทอะทะเกินจำเป็น และใช้งานได้ในชีวิตประจำวัน
 
-<div class="grid grid-cols-[repeat(auto-fit,minmax(300px,1fr))] gap-8">
-  <figure>
-    <Picture
-      class="mt-0 mb-2"
-      src="/images/uses/ginkgo65-keyboard.jpg"
-      alt="keyboard Ginkgo65 ใช้ที่ทำงาน"
-      widths={[300,600,1200]}
-      aspectRatio={1200/675}
-      width={1200}
-    />
-    <figcaption class="mt-0">Gingko65</figcaption>
-  </figure>
-  <figure>
-    <Picture
-      class="mt-0 mb-2"
-      src={import('../images/portico.jpg')}
-      alt="My Portico Keyboard with MT3 Susuwatari Keycaps"
-      widths={[300,600,1200]}
-      aspectRatio={1200/675}
-      width={1200}
-    />
-    <figcaption class="mt-0">Portico</figcaption>
-  </figure>
+<div class="full-bleed">
+  <div class="grid grid-cols-[repeat(auto-fit,minmax(300px,1fr))] gap-8">
+    <figure>
+      <Picture
+        class="mt-0 mb-2"
+        src="/images/uses/ginkgo65-keyboard.jpg"
+        alt="keyboard Ginkgo65 ใช้ที่ทำงาน"
+        widths={[300,600,1200]}
+        aspectRatio={1200/675}
+        width={1200}
+      />
+      <figcaption class="mt-0">Gingko65</figcaption>
+    </figure>
+    <figure>
+      <Picture
+        class="mt-0 mb-2"
+        src={import('../images/portico.jpg')}
+        alt="My Portico Keyboard with MT3 Susuwatari Keycaps"
+        widths={[300,600,1200]}
+        aspectRatio={1200/675}
+        width={1200}
+      />
+      <figcaption class="mt-0">Portico</figcaption>
+    </figure>
+  </div>
 </div>
 
-keyboard ที่ใช้งานตัวล่าสุดคือ Ginkgo65 / Portico แล้วก็ Tofu 60% ทั่วไป
+keyboard ที่ใช้งานตัวล่าสุดคือ Ginkgo65, Portico แล้วก็ Tofu 60% ทั่วไป
 ทุกตัวที่ผมทำ จะมีเป้าหมายเพื่อใช้งานเป็น keyboard ตัวหลัก (daily driver)
 และใช้งานจริงจังเสมอจนกว่าจะเปลี่ยนตัวใหม่ครับ
 
@@ -57,8 +61,8 @@ keyboard ที่ใช้งานตัวล่าสุดคือ Ginkgo6
 
 ## ทำไมต้อง split keyboard
 
-[Split keyboard](https://github.com/diimdeep/awesome-split-keyboards) ตามที่ผมเข้าใจ คือคีย์บอร์ดที่แยกข้างซ้ายกับข้างขวาแยกกันชัดเจนครับ
-จุดประสงค์ก็คือ ทำให้สามารถจัดวางคีย์บอร์ดฝั่งซ้ายและขวาในลักษณะต่างๆ ตามใจชอบ
+[Split keyboard](https://github.com/diimdeep/awesome-split-keyboards) ตามที่ผมเข้าใจ คือ keyboard ที่แยกข้างซ้ายกับข้างขวาแยกกันชัดเจน
+จุดประสงค์ก็คือ ทำให้สามารถจัดวาง keyboard ฝั่งซ้ายและขวาในลักษณะต่างๆ ตามใจชอบ
 และให้เข้ากับสรีระของเราได้มากขึ้นครับ มือซ้าย-ขวาจะห่างกันเท่าไหร่
 หรือจะเอียงเท่าไหร่ก็แล้วแต่เราจะจัดวางครับ
 
@@ -76,18 +80,19 @@ keyboard ที่ใช้งานตัวล่าสุดคือ Ginkgo6
 </figure>
 
 ก่อนหน้านี้ไม่ค่อยอินกับ split keyboard เท่าไหร่ รู้สึกว่ารูปร่างมันประหลาด
-น่าจะใช้งานยาก คิดว่าคงไม่เหมาะกับตัวเอง ไม่คิดว่าผมจะใช้ split keyboard ได้เลยด้วยซ้ำ
+น่าจะใช้งานยาก คิดว่าคงไม่เหมาะกับตัวเอง
 
 แต่แล้วอะไรสักอย่างก็พาไปเจอกับ video [**How to build a handwired keyboard**](https://www.youtube.com/watch?v=hjml-K-pV4E) ของคุณ Joe Scotto
-ซึ่งผมก็กดเข้าไปดู video อื่นๆ ในช่อง YouTube ของเขา และทำให้ได้รู้จัก split keyboard ที่ชื่อว่า Corne ครับ
+ซึ่งผมก็กดเข้าไปดู video อื่นๆ ในช่อง YouTube ของเขา และทำให้ได้รู้จัก split keyboard ที่ชื่อว่า [**Corne**](https://github.com/foostan/crkbd) ครับ
 
-ผมสะดุดตากับความมินิมอล และในอีกมุมหนึ่งก็สงสัยว่ามันจะทำยากไหม เลยอยากลองทำดูครับ (จะใช้งานได้หรือไม่ได้ เดี๋ยวค่อยว่ากัน แต่อยากลองทำ)
+ผมสะดุดตากับความมินิมอลของตัว [Wireless Corne](https://www.youtube.com/watch?v=FJgvi7WShxY)
+และในอีกมุมหนึ่งก็สงสัยว่ามันจะทำยากไหม เลยอยากลองทำดูครับ (จะใช้งานได้หรือไม่ได้ เดี๋ยวค่อยว่ากัน แต่อยากลองทำ)
 
 อีกอย่างที่สำคัญ ดูแล้วมันน่าจะเป็น mechanical keyboard ตัวแรก ที่ผมไม่ต้องปวดหัวกับ stabilizer ด้วยครับ
 
 ### หาของ
 
-ดู part list ของ Corne แล้วมึน นอกจากเยอะแล้วยังไม่รู้ด้วยว่าอะไรเป็นอะไร ผมก็เลย play safe ด้วยการสั่งเป็นชุดมาจาก Etsy ชุดนี้ครับ [Crkbd v3 (Corne Keyboard) MX Hotswap DIY Mechanical Ergonomic Hotswap Split Keyboard PCB](https://www.etsy.com/listing/972779149/crkbd-v3-corne-keyboard-mx-hotswap-diy) config ที่เลือกเป็น PCB + Parts กับตัว controller ที่เป็น USB type C รวมราคาประมาณ 4300 บาท
+ดู part list ของ Corne แล้วมึน นอกจากเยอะแล้วยังไม่รู้ด้วยว่าอะไรเป็นอะไร ผมก็เลย play safe ด้วยการสั่งเป็นชุดมาจาก Etsy ชุดนี้ครับ: [Crkbd v3 (Corne Keyboard) MX Hotswap DIY Mechanical Ergonomic Hotswap Split Keyboard PCB](https://www.etsy.com/listing/972779149/crkbd-v3-corne-keyboard-mx-hotswap-diy) config ที่เลือกเป็น PCB + Parts กับตัว controller ที่เป็น USB type C รวมราคาประมาณ 4,300 บาท
 
 <div class="full-bleed">
   <div class="grid grid-cols-[repeat(auto-fit,minmax(300px,1fr))] gap-8">
@@ -110,7 +115,10 @@ keyboard ที่ใช้งานตัวล่าสุดคือ Ginkgo6
 
 ไม่ได้เลือก case กับ plate เพราะคิดว่าถ้าหาเองหรือทำเองน่าจะถูกกว่า ไปเจอเคส 3D Print จากใน[คลิปนี้](https://www.youtube.com/watch?v=hXohJwatIpA) ซี่งเขาก็[แจกไฟล์ให้ฟรีด้วยที่ printables.com](https://www.printables.com/model/347524-corne-keyboard-case) ผมก็ส่งไปให้ร้าน 3D print ใกล้บ้านทำออกมา ราคารวมทั้ง case และ plate อยู่ที่ประมาณ 900 บาทครับ
 
-งานภายนอกก็ดูโอเคดี แต่ปัญหามันไปเจอตอนประกอบครับ เพราะว่า plate ที่ได้มานั้นมัน**ใส่สวิตช์ไม่ลงแทบเลย** ขนาดช่องมันเล็กกว่าตัวสวิตช์อยู่นิดเดียว คิดว่าอาจเป็นเพราะคุณภาพงานพิมพ์ 3 มิติไม่ละเอียดพอ ผมแก้ด้วยการใช้ตะไบฝนด้านขอบในของแต่ละช่อง จนกว่ามันจะใส่สวิตช์ลงไปได้ ใช้เวลาและพลังเยอะอยู่เหมือนกันครับขั้นตอนนี้
+งานภายนอกก็ดูโอเคดี แต่ปัญหามันไปเจอตอนประกอบครับ เพราะว่า plate ที่ได้มานั้นมัน**ใส่สวิตช์ไม่ลงแทบเลย** ขนาดช่องมันเล็กกว่าตัวสวิตช์อยู่นิดเดียว
+คิดว่าอาจเป็นเพราะคุณภาพงานพิมพ์ 3 มิติไม่ละเอียดพอ
+
+ผมแก้ด้วยการใช้ตะไบฝนด้านขอบในของแต่ละช่อง จนกว่ามันจะใส่สวิตช์ลงไปได้ ขั้นตอนนี้ใช้เวลาและพลังเยอะอยู่เหมือนกันครับ
 
 <Picture
   src={import('../images/case-v1.jpg')}
@@ -125,7 +133,7 @@ keyboard ที่ใช้งานตัวล่าสุดคือ Ginkgo6
 พอได้ของมาครบแล้วก็ลงมือประกอบตาม guide ของคุณ [**Rafael Delboni**](https://www.youtube.com/watch?v=O49hrYDCL3o) ที่มีทั้งเวอร์ชั่น video กับเวอร์ชั่น text ด้วย
 ผมตาม guide ของเขาเพราะว่าดูแล้วเข้าใจและเห็นภาพมากกว่า official guide ครับ
 
-และเนื่องจากตัวคีย์บอร์ดมีสองชิ้นแยกกัน ผมเลยตั้งใจว่าจะทำให้เสร็จข้างขวาก่อน แล้วค่อยไปทำแบบเดิมอีกทีกับข้างซ้ายครับ
+และเนื่องจากตัว keyboard มีสองชิ้นแยกกัน ผมเลยตั้งใจว่าจะทำให้เสร็จข้างขวาก่อน แล้วค่อยไปทำแบบเดิมอีกทีกับข้างซ้ายครับ
 
 ### SMD components
 
@@ -161,7 +169,7 @@ keyboard ที่ใช้งานตัวล่าสุดคือ Ginkgo6
 ต้องใช้ diode หนี่งตัวต่อสวิตช์หนี่งตัว ก็ต้องบัดกรีทั้งหมด 42 ตัว ค่อนข้างทุลักทุเลครับเพราะผมใช้หัวแร้งกับลวดตะกั่วบัดกรีธรรมดา ทำเสร็จครึ่งนึงคือ 21 ตัวแรกต้องพักเหนื่อยก่อน
 
 ระหว่างพักก็ไปหาดูเทคนิคการบัดกรีชิ้นส่วนเล็กๆ ใน Youtube ก็เจอ video [**Soldering Surface Mount Components | Soldering Basics**](https://www.youtube.com/watch?v=MjiJgniYZmY)
-ถึงได้ค้นพบว่า โลกนี้มีสิ่งที่เรียกว่า **ตะกั่วเหลว** หรือ **Soldering Paste** อยู่ด้วย ผมไม่เคยเห็นมาก่อนแต่ดูแล้วน่าจะใช้งานได้สะดวกดี เลยสั่งมาลอง
+ถึงได้ค้นพบว่า โลกนี้มีสิ่งที่เรียกว่า **ตะกั่วเหลว** หรือ **Solder Paste** อยู่ด้วย ผมไม่เคยเห็นมาก่อนแต่ดูแล้วน่าจะใช้งานได้สะดวกดี เลยสั่งมาลอง
 
 <Picture
   class="mx-auto"
@@ -172,15 +180,17 @@ keyboard ที่ใช้งานตัวล่าสุดคือ Ginkgo6
   width={400}
 />
 
-ก็พบว่า มันสะดวกขึ้นเยอะมากๆ ผมรู้สึกขอบคุณ video ต้นทางจริงๆ ที่ทำให้ได้รู้จักสิ่งนี้ ถือว่าได้เปิดโลกเลย 55
+ก็พบว่า มันสะดวกขึ้นเยอะมาก ตัวตะกั่วเหลวมันจะข้นๆ หนืดๆ เหมือนยาสีฟัน พอวางชิ้นส่วนเล็กจิ๋วลงไปมันก็จะช่วยยึดไว้ไม่ให้ขยับง่าย เอาหัวแร้งจิ้มลงไปก็ติดเลย ทำงานเสร็จไวขึ้นมาก และทำให้รอยบัดกรีสวยกว่าด้วย
 
-ตัวตะกั่วเหลวมันจะข้นๆ หนืดๆ พอวางชิ้นส่วนเล็กจิ๋วลงไปมันก็จะช่วยยึดไว้ไม่ให้ขยับง่าย เอาหัวแร้งจิ้มลงไปก็ติดเลย ทำงานเสร็จไวขึ้นมาก และทำให้รอยบัดกรีสวยกว่าด้วย เป็นอุปกรณ์เปิดโลกของผมเลย
+ผมรู้สึกขอบคุณ video ต้นทางจริงๆ ที่ทำให้ได้รู้จักสิ่งนี้ ถือว่าได้เปิดโลกเลย 55
 
 > จริงๆ ใช้ตะกั่วเหลวคู่กับปืนเป่าลมร้อน (heat gun) น่าจะง่ายกว่า สามารถบัดกรีพร้อมกันหลายๆ ตัวได้ แต่ผมลองแล้วไม่ค่อยถนัดครับ
 
-ต่อจาก diode ก็เป็น hotstwap socket ของสวิตช์, ไฟ underglow LED, แล้วก็ไฟ LED ฃองสวิตช์แต่ละตัว วิธีทำก็เหมือนๆ กันเพราะเป็นชื้นส่วนประเภท SMD เหมือนกันหมด พวกที่เป็นไฟ LED นี่ต้องวางให้ถูกทิศทางด้วย (ใน build guide มีเขียนบอกไว้ละเอียด) ส่วนตัว hotswap socket ไม่ยากเท่าไหร่เพราะชิ้นใหญ่กว่าเพื่อนครับ
+ต่อจาก diode ก็เป็น hotstwap socket ของสวิตช์, ไฟ underglow LED, แล้วก็ไฟ LED ฃองสวิตช์แต่ละตัว
+วิธีทำก็เหมือนๆ กันเพราะเป็นชื้นส่วนประเภท SMD เหมือนกันหมด พวกที่เป็นไฟ LED นี่ต้องวางให้ถูกทิศทางด้วย
+(ใน build guide มีเขียนบอกไว้ว่าต้องหันไปทางไหน) ส่วนตัว hotswap socket ไม่ยากเท่าไหร่เพราะชิ้นใหญ่กว่าเพื่อนครับ
 
-1 ปุ่มกดต้องบัดกรี 3 อย่างคือ diode, hotswap socket, และไฟ LED ทั้งคีย์บอร์ดมี 42 ปุ่ม ก็คูณ 3 เข้าไป
+1 ปุ่มกดต้องบัดกรี 3 อย่างคือ diode, hotswap socket, และไฟ LED ทั้ง keyboard มี 42 ปุ่ม ก็คูณ 3 เข้าไป
 โดยรวมๆ แล้วก็บัดกรีกันตาแตกครับ เยอะกว่าที่เคยทำมากๆ
 
 <div class="full-bleed">
@@ -248,11 +258,11 @@ keyboard ที่ใช้งานตัวล่าสุดคือ Ginkgo6
 ### ทดสอบ
 
 ขั้นตอนนี้ตื่นเต้นที่สุดละครับ เพราะที่ทำมาทั้งหมดนี่ยังไม่รู้เลยว่ามันจะเวิร์กรึเปล่า
-พอเสียบสายคีย์บอร์ดเข้ากับคอม ก็เห็นไฟ LED ติดทุกดวงก่อนเป็นอย่างแรก
+พอเสียบสาย keyboard เข้ากับคอม ก็เห็นไฟ LED ติดทุกดวงก่อนเป็นอย่างแรก
 เอาล่ะ อย่างน้อยไฟก็ไม่พัง
 
 จากนั้นก็ทดสอบแต่ละปุ่มด้วย key tester ใน VIA ผมใช้สวิตช์ใหม่เสียบลงไปทีละช่อง
-ทดสอบทีละปุ่มจนครบ พบว่าทุกปุ่มใช้งานได้ ไม่มีปุ่มไหนดับเลย (ทั้งที่จริงๆ ทำใจรอไว้แล้วว่ามันต้องดับสักปุ่มแน่) ถือว่าประสบความสำเร็จ
+ทดสอบทีละปุ่มจนครบ พบว่าทุกปุ่มใช้งานได้ ไม่มีปุ่มไหนดับเลย ถือว่าประสบความสำเร็จแล้วล่ะ
 
 <div class="full-bleed">
   <div class="grid grid-cols-[repeat(auto-fit,minmax(300px,1fr))] gap-8">
@@ -282,7 +292,7 @@ keyboard ที่ใช้งานตัวล่าสุดคือ Ginkgo6
 
 ### รวมร่าง
 
-หลังจากทดสอบว่าทุกอย่างเวิร์กแล้ว ก็ถึงเวลาประกอบตัวคีย์บอร์ดเข้ากับ plate กับ case พร้อมใส่สวิตช์กับ keycaps ซึ่งผมก็ย้ายมาจากคีย์บอร์ดตัวก่อนหน้า สวิตช์เป็น C3 Tangerine 67g ส่วน keycaps ตอนแรกลองใส่ MT3 Extended 2048 ดูก่อน พบว่าสูงไป พิมพ์ยาก เลยเปลี่ยนใส่ GMK WoB Katakana แทนครับ
+หลังจากทดสอบว่าทุกอย่างเวิร์กแล้ว ก็ถึงเวลาประกอบตัว keyboard เข้ากับ plate กับ case พร้อมใส่สวิตช์กับ keycaps ซึ่งผมก็ย้ายมาจาก keyboard ตัวก่อนหน้า สวิตช์เป็น C3 Tangerine 67g ส่วน keycaps ตอนแรกลองใส่ MT3 Extended 2048 ดูก่อน พบว่าสูงไป พิมพ์ยาก เลยเปลี่ยนใส่ GMK WoB Katakana แทนครับ
 
 <figure class="mt-0">
   <Picture
@@ -315,7 +325,7 @@ keyboard ที่ใช้งานตัวล่าสุดคือ Ginkgo6
 
 สิ่งที่เห็นได้ชัดเจนตั้งแต่แรกคือการใช้นิ้วที่ไม่ถูกต้องในการกดบางปุ่ม เช่น ผมใช้นิ้วชี้ข้างขวากดปุ่ม B, ใช้นิ้วนางแทนนิ้วก้อยเป็นส่วนมาก, ส่วนปุ่ม spacebar พบว่าผมใช้นิ้วหัวแม่มือทั้งสองข้างในการกด ขึ้นอยู่กับสิ่งที่กำลังพิมพ์อยู่ เป็นแบบนี้มาตั้งนานโดยที่ไม่รู้ตัวเหมือนกัน
 
-พอมาใช้ split keyboard ทำให้เห็นปัญหาพวกนี้ชัดเจน ผมเลยพยายามแก้มันพร้อมๆ กันทั้งหมดเลยตั้งแต่วันแรก ทั้งการวางมือและใช้นิ้วให้ถูกต้องตาม column, พยายามใช้นิ้วก้อยให้มากขึ้น พบว่าวันแรกนั้นลำบากและฝืนมากครับ พิมพ์แทบไม่ได้เลย มันเหมือนต้องมาฝึกใช้คีย์บอร์ดใหม่ตั้งแต่แรก
+พอมาใช้ split keyboard ทำให้เห็นปัญหาพวกนี้ชัดเจน ผมเลยพยายามแก้มันพร้อมๆ กันทั้งหมดเลยตั้งแต่วันแรก ทั้งการวางมือและใช้นิ้วให้ถูกต้องตาม column, พยายามใช้นิ้วก้อยให้มากขึ้น พบว่าวันแรกนั้นลำบากและฝืนมากครับ พิมพ์แทบไม่ได้เลย มันเหมือนต้องมาฝึกใช้ keyboard ใหม่ตั้งแต่แรก
 
 คิดว่าลำบากเกินไป และทำงานได้ช้า ในวันที่ 2 ผมเลยลองกลับไปพิมพ์มั่วๆ แบบเดิมอีก พบว่าชีวิตสบายขึ้นเยอะ เรื่องที่ต้องแก้ก็คือแยกการกดปุ่มมือซ้าย-ขวา ไม่ข้ามฝั่ง ส่วนที่เหลือก็ปล่อยไปตามความเคยชิน ไม่ได้ใช้นิ้วแบบถูกและตรงตาม column 100% แบบนี้ใช้งานได้ง่ายและสนุกกว่าสำหรับผมครับ
 
@@ -351,7 +361,7 @@ keyboard ที่ใช้งานตัวล่าสุดคือ Ginkgo6
 
 ### Keymaps
 
-ต้องปรับตัวเยอะอยู่เหมือนกันครับ มาจาก 60/65% ปัญหาแรกก็คือแถวบนสุดหายหมดเลย ต่อมาก็เป็นปุ่มที่อยู่บริเวณขวาบนของคีย์บอร์ดทั่วไป ที่ก็หายไปด้วยเหมือนกัน การตั้ง keymap ของผมเลยมีทั้งการใช้ layer กับการเรียงตำแหน่งปุ่มใหม่ด้วยครับ ซึ่งทุกวันนี้ก็ยังไม่ลงตัว 100% แต่ก็ถือว่าใช้งานได้ไม่ติดขัดครับ
+ต้องปรับตัวเยอะอยู่เหมือนกันครับ มาจาก 60/65% ปัญหาแรกก็คือแถวบนสุดหายหมดเลย ต่อมาก็เป็นปุ่มที่อยู่บริเวณขวาบนของ keyboard ทั่วไป ที่ก็หายไปด้วยเหมือนกัน การตั้ง keymap ของผมเลยมีทั้งการใช้ layer กับการเรียงตำแหน่งปุ่มใหม่ด้วยครับ ซึ่งทุกวันนี้ก็ยังไม่ลงตัว 100% แต่ก็ถือว่าใช้งานได้ไม่ติดขัดครับ
 
 - Default layer (Layer 0) เป็น layout QWERTY ธรรมดา ผมเอาปุ่ม space ไว้ที่ thumb key ข้างซ้าย ส่วน enter ไว้ที่ thumb key ข้างขวาครับ
 - Layer 1 สำหรับเครื่องหมายต่างๆ ที่ใช้กับการเขียนโค้ด พร้อมกับ arrow keys - กดปุ่ม caps lock / mo(1) ค้างไว้จะเป็น layer 1
@@ -490,6 +500,6 @@ keyboard ที่ใช้งานตัวล่าสุดคือ Ginkgo6
 ผมพยายามหาสาเหตุและลองซ่อมอยู่สักพัก ลอง reset / flash firmware ใหม่หลายรอบ แต่ก็ไม่เวิร์กครับ คิดว่าอาจจะพังที่สายหรือตัวแจ็ค TRRS ทำให้ keyboard สองข้างคุยกันไม่รู้เรื่อง
 แต่ผมมีสายนี้แค่เส้นเดียว เลยไม่ได้ใช้สายเส้นอื่นทดสอบว่าเดาถูกไหม
 
-ไหนๆ ก็พังแล้ว ผมก็เลยจะถือโอกาสนี้ อัพเกรดมันเป็นให้ wireless split keyboard ซะเลย จะได้ไม่ต้องมีสายให้รุงรัง
+ไหนๆ ก็พังแล้ว ผมก็เลยจะถือโอกาสนี้ อัพเกรดมันเป็นให้ wireless split keyboard ซะเลย (อ้าว!) จะได้ไม่ต้องมีสายให้รุงรัง
 
-ไว้มาอัพเดทในตอนต่อไปครับ
+ไว้มาอัพเดทในตอนต่อไปครับ สวัสดีครับ
