--- a/src/content/blog/corne-keyboard/index.mdx
+++ b/src/content/blog/corne-keyboard/index.mdx
@@ -399,7 +399,7 @@ Overall it is not a better keyboard - it is just different, and is more fun to u
 
 As mentioned earlier, the 3D-printed case and plates have some issues. The surface and edges look a bit rough. Then I know they are _really_ rough when I'm not able to put the switches in - the plate slots are a tad too small for the switches because the printing is not precise enough. 🤯
 
-I have to file down 4 sides of each slot so it can accommodate the switch and hold it in place. It took me forever to do all of them (42 slots) and I still am not happy with the results. I can put all switches in eventually, but it is not easy.
+I have to file down 4 sides of each slot so it can accommodate the switch and hold it in place. It took me quite some time to do all of them (42 slots) and I still am not happy with the results. I can put all switches in eventually, but it is not easy.
 
 After using the keyboard for a week, I want to make the case looks nicer.
 I use sandpaper to sand the surface and to remove some sharp edges of the case,
@@ -428,7 +428,7 @@ And this is a game over. ☀️ 🫠
 
 The case is slightly bent by the heat and I'm not able to put the keyboard back in the case anymore! This is how I learned the hard way that PLA material is quite sensitive to heat. I underestimate also how strong the Sun is in Chiang Mai. I was disappointed.
 
-I manage to fix it a bit by using a hair dryer so that I can barely put back the keyboard in. The case however will never go back into its original shape.
+I manage to fix it a bit by using a hair dryer so that I can barely put back the keyboard in again. The case however will never go back into its original shape.
 
 This bothers me for a week before I decide to make a new one. This time I contact another shop in Bangkok: [ModCables101](https://www.facebook.com/ModCables101/), and try to make sure the printing quality is better because I don't want to do the finishing again.
 They guarantee that no extra work is needed from the printing, and it would be ready to use of the the box. I choose the normal version instead of the tented version in is print.
@@ -459,7 +459,7 @@ And the result is very good. The quality is much, much better than another shop.
 
 ### Lessons Learned
 
-- Some switches popped out from the hotswap socket sometimes when I put it in my backpack, which is a typical issue for a keyboard with hotswap sockets.
+- Some switches popped out from the hotswap socket sometimes when I put it in my backpack, which is a typical issue for a keyboard with hotswap sockets. I don't have a bag or carrying case for it. 
 - There are now 2 cables I always have to carry instead of 1: TRRS and USB cables, which is cumbersome. A wireless build would get rid of this issue.
 - The OLED module and LEDs lights are optional.
 - ~The OLED display module is kind of useless for me~ I take it back. It is helpful when there's problem. I recently has an issue that the keyboard stops working. The OLED screen shows weird graphic so I know something's not right.
