--- a/src/content/blog/corne-keyboard/index.mdx
+++ b/src/content/blog/corne-keyboard/index.mdx
@@ -13,7 +13,7 @@ categories:
 - hobby
 ---
 
-import { Picture, Image } from '@astrojs/image/components';
+import { Image } from 'astro:assets';
 
 When it comes to using mechanical keyboards, my preference are the 60%/65% ones where I find a balance between how they look and the ease of use.
 My previous keyboards were a Gingko65, a Portico, and [a](https://armno.in.th/blog/building-mechanical-keyboard/) [few](https://armno.in.th/blog/mechanical-keyboard-build-2/) [of](https://armno.in.th/blog/60-percent-mechanical-keyboard-with-arrows/) custom 60% ones.
@@ -27,7 +27,6 @@ I think I have enough keyboards ... _at this size_ at least.
       src="/images/uses/ginkgo65-keyboard.jpg"
       alt="my Ginkgo65 mechanical keyboard at work"
       widths={[300,600,1200]}
-      aspectRatio={1200/675}
       width={1200}
     />
     <figcaption class="mt-0">Gingko65</figcaption>
@@ -38,7 +37,6 @@ I think I have enough keyboards ... _at this size_ at least.
       src={import('./images/portico.jpg')}
       alt="My Portico Keyboard with MT3 Susuwatari Keycaps"
       widths={[300,600,1200]}
-      aspectRatio={1200/675}
       width={1200}
     />
     <figcaption class="mt-0">Portico</figcaption>
@@ -54,7 +52,6 @@ Mainly because I'm curious, and partly because there are no stabilizers involved
     src="https://i.ytimg.com/vi/wTMcH7u-vu0/maxresdefault.jpg"
     alt="Corne wireless keyboard by Josean Martinez"
     widths={[300,600,1200]}
-    aspectRatio={1200/675}
     width={1200}
   />
   <figcaption class="px-4">
@@ -80,21 +77,18 @@ While waiting for the parts to deliver, I check out different case designs and c
       src={import('./images/parts-box.jpg')}
       alt="Corne keyboard parts delivered in a small box"
       widths={[400,800,1600]}
-      aspectRatio={3/2}
       width={800}
     />
     <Picture
       src={import('./images/corne-pcb.jpg')}
       alt="Corne PCBs"
       widths={[400,800,1600]}
-      aspectRatio={3/2}
       width={800}
     />
     <Picture
       src={import('./images/case-v1.jpg')}
       alt="The 3D printed case for the Corne keyboard. Designed by VOID"
       widths={[400,800,1600]}
-      aspectRatio={3/2}
       width={800}
     />
   </div>
@@ -116,7 +110,6 @@ I start with soldering **SMD** (Surface Mounting Device) diodes (_SOD-123_), whi
         src={import('./images/small-diode.jpg')}
         alt="The size of a diode compared to the tip of the tweezer and the PCB"
         widths={[400,800,1600]}
-        aspectRatio={3/2}
         width={800}
       />
       <figcaption class="px-4 mt-0">The size of a diode compared to the tip of a tweezer.</figcaption>
@@ -126,7 +119,7 @@ I start with soldering **SMD** (Surface Mounting Device) diodes (_SOD-123_), whi
         src={import('./images/soldered-diodes.jpg')}
         alt="Soldered diodes. Many bad soldering there."
         widths={[400,800,1600]}
-        aspectRatio={3/2}
+
         width={800}
       />
       <figcaption class="px-4 mt-0">There are imperfect soldering marks everywhere.</figcaption>
@@ -145,7 +138,7 @@ And Soldering Paste is a game changer for me.
   src={import('./images/relife-soldering-paste.jpg')}
   alt="Relife soldering paste 183c"
   widths={[400,800,1600]}
-  aspectRatio={1}
+
   width={400}
 />
 
@@ -161,14 +154,14 @@ After that, it is soldering the LEDs. There are 12 underglow LEDs (_WS2812B_) an
       src={import('./images/soldered-gateron-hotswap-sockets.jpg')}
       alt="Gateron Hotswap sockets are soldered in place"
       widths={[400,800,1600]}
-      aspectRatio={16/9}
+
       width={800}
     />
     <Picture
       src={import('./images/soldered-leds.jpg')}
       alt="all LEDs are soldered to the PCB"
       widths={[400,800,1600]}
-      aspectRatio={16/9}
+
       width={800}
     />
   </div>
@@ -192,14 +185,14 @@ I learn later on that what I miss was [socketing](https://github.com/foostan/crk
       src={import('./images/pro-micro-pins.jpg')}
       alt="Soldered pins for pro-micro"
       widths={[400,800,1600]}
-      aspectRatio={3/2}
+
       width={800}
     />
     <Picture
       src={import('./images/sea-micro.jpg')}
       alt="the controller used for this keyboard is the Sea-Micro controller"
       widths={[400,800,1600]}
-      aspectRatio={3/2}
+
       width={800}
     />
   </div>
@@ -210,14 +203,14 @@ I learn later on that what I miss was [socketing](https://github.com/foostan/crk
       src={import('./images/soldered-pro-micro.jpg')}
       alt=""
       widths={[400,800,1600]}
-      aspectRatio={3/2}
+
       width={800}
     />
     <Picture
       src={import('./images/oled-module-installed.jpg')}
       alt=""
       widths={[400,800,1600]}
-      aspectRatio={3/2}
+
       width={800}
     />
   </div>
@@ -239,21 +232,21 @@ The next step is to check if all the keys work with the key tester in Via. I tes
       src={import('./images/per-key-led.jpg')}
       alt="Per-key LEDs of the Corne Keyboard"
       widths={[400,800,1600]}
-      aspectRatio={3/2}
+
       width={800}
     />
     <Picture
       src={import('./images/underglow-led.jpg')}
       alt="Underglow LEDs of the Corne Keyboard"
       widths={[400,800,1600]}
-      aspectRatio={3/2}
+
       width={800}
     />
     <Picture
       src={import('./images/rgb.jpg')}
       alt="RGB LEDs of the Corne Keyboard"
       widths={[400,800,1600]}
-      aspectRatio={3/2}
+
       width={800}
     />
   </div>
@@ -271,7 +264,7 @@ I put the switches and keycaps from my previous keyboards in. And I have to say 
     src={import('./images/corne-keyboard-mt3-biip-extended.jpg')}
     alt="the Corne Keyboard with MT3 biip Extended 2048 keycaps"
     widths={[400,800,1600]}
-    aspectRatio={3/2}
+
     width={800}
   />
   <figcaption class="px-4 mt-0">with MT3 Extended 2048 keycaps</figcaption>
@@ -282,7 +275,7 @@ I put the switches and keycaps from my previous keyboards in. And I have to say 
     src={import('./images/front-shot.jpg')}
     alt="the Corne Keyboard with GMK White on Black Katakana Keycaps"
     widths={[400,800,1600]}
-    aspectRatio={3/2}
+
     width={800}
   />
   <figcaption class="px-4 mt-0">with GMK WoB Katakana keycaps</figcaption>
@@ -302,7 +295,6 @@ Layer 0: Traditional QWERTY layout.
   src={import('./images/layer0.png')}
   alt="Layer 0 of my Corne Keyboard."
   widths={[400,800,1600]}
-  aspectRatio={1728/620}
   width={800}
 />
 
@@ -312,7 +304,6 @@ Layer 1 (lower): quick access to coding symbol without using `shift` key, arrows
   src={import('./images/layer-lower.png')}
   alt="Layer 2 of my Corne Keyboard."
   widths={[400,800,1600]}
-  aspectRatio={1728/620}
   width={800}
 />
 
@@ -322,7 +313,6 @@ Layer 2 (raised): Numpads, media controls, and keys to adjust my laptop's screen
   src={import('./images/layer-raise.png')}
   alt="Layer 1 of my Corne Keyboard."
   widths={[400,800,1600]}
-  aspectRatio={1728/620}
   width={800}
 />
 
@@ -360,14 +350,14 @@ Once I get comfortable with it, I think a split keyboard is more fun to use.
       src={import('./images/corne-left.jpg')}
       alt="Left part of the Corne Keyboard"
       widths={[400,800,1600]}
-      aspectRatio={3/2}
+
       width={800}
     />
     <Picture
       src={import('./images/corne-right.jpg')}
       alt="Right part of the Corne Keyboard"
       widths={[400,800,1600]}
-      aspectRatio={3/2}
+
       width={800}
     />
   </div>
@@ -413,14 +403,14 @@ And this is a game over. ☀️ 🫠
       src={import('./images/case-v1-closeup.jpg')}
       alt="first printed case - tented version. Designed by VOID."
       widths={[400,800,1600]}
-      aspectRatio={3/2}
+
       width={800}
     />
     <Picture
       src={import('./images/case-v1-under-sunlight.jpg')}
       alt="Putting the 3D printed case under the direct sunlight"
       widths={[400,800,1600]}
-      aspectRatio={3/2}
+
       width={800}
     />
   </div>
@@ -442,7 +432,7 @@ And the result is very good. The quality is much, much better than another shop.
         src={import('./images/case-v2.jpg')}
         alt="the new 3D printed case from another shop"
         widths={[400,800,1600]}
-        aspectRatio={3/2}
+
         width={800}
       />
     <figcaption class="px-4 mt-0">The 2nd 3D-printed case and plate</figcaption>
@@ -451,7 +441,7 @@ And the result is very good. The quality is much, much better than another shop.
       src={import('./images/plate-v2.jpg')}
       alt="Plate printed with the new case. Switches can go in easily."
       widths={[400,800,1600]}
-      aspectRatio={3/2}
+
       width={800}
     />
   </div>
@@ -459,7 +449,7 @@ And the result is very good. The quality is much, much better than another shop.
 
 ### Lessons Learned
 
-- Some switches popped out from the hotswap socket sometimes when I put it in my backpack, which is a typical issue for a keyboard with hotswap sockets. I don't have a bag or carrying case for it. 
+- Some switches popped out from the hotswap socket sometimes when I put it in my backpack, which is a typical issue for a keyboard with hotswap sockets. I don't have a bag or carrying case for it.
 - There are now 2 cables I always have to carry instead of 1: TRRS and USB cables, which is cumbersome. A wireless build would get rid of this issue.
 - The OLED module and LEDs lights are optional.
 - ~The OLED display module is kind of useless for me~ I take it back. It is helpful when there's problem. I recently has an issue that the keyboard stops working. The OLED screen shows weird graphic so I know something's not right.
@@ -467,7 +457,7 @@ And the result is very good. The quality is much, much better than another shop.
     src={import('./images/weird-graphic-oled-screen.jpg')}
     alt="Weird graphics shown the OLED screen. Something is not right."
     widths={[400,800]}
-    aspectRatio={1}
+
     width={400}
   />
 - Getting each part separately rather than buying a set seems to be a cheaper option. From [Rafael's shopping list](https://github.com/rafaeldelboni/buildlogs/blob/main/crkbd-v3.md#part-list-original) it seems everything can be purchased from AliExpress.
@@ -481,14 +471,14 @@ And the result is very good. The quality is much, much better than another shop.
       src={import('./images/stacked-modules.jpg')}
       alt="Stacked modules: PCB / controller / OLED"
       widths={[400,800,1600]}
-      aspectRatio={1}
+
       width={800}
     />
     <Picture
       src={import('./images/oled-display-module.jpg')}
       alt="The OLED display module"
       widths={[400,800,1600]}
-      aspectRatio={1}
+
       width={800}
     />
   </div>
@@ -499,14 +489,14 @@ And the result is very good. The quality is much, much better than another shop.
       src={import('./images/pcb-back.jpg')}
       alt="The back of the Corne PCB"
       widths={[400,800,1600]}
-      aspectRatio={1}
+
       width={800}
     />
     <Picture
       src={import('./images/back-case.jpg')}
       alt="The back side of the 3D printed case"
       widths={[400,800,1600]}
-      aspectRatio={1}
+
       width={800}
     />
   </div>
@@ -524,7 +514,6 @@ Happy Building
   src={import('./images/top-shot.jpg')}
   alt="the Corne split keyboard, from the top"
   widths={[400,800,1600]}
-  aspectRatio={1600/900}
   width={800}
 />
 
@@ -532,6 +521,6 @@ Happy Building
   src={import('./images/over.jpg')}
   alt="the Corne split keyboard"
   widths={[400,800,1600]}
-  aspectRatio={16/9}
+
   width={800}
 />
