yolo update dependencies

--- a/src/pages/uses/index.mdx
+++ b/src/pages/uses/index.mdx
@@ -6,6 +6,7 @@ thumbnail: /images/uses/laptop.jpg
 pubDate: 2022-06-08T07:51:22+07:00
 layout: ../../layouts/PageLayout.astro
 ---
+import Picture from '@components/Picture.astro'
 
 # Tools I use
 
