--- a/src/pages/uses/index.mdx
+++ b/src/pages/uses/index.mdx
@@ -1,12 +1,13 @@
 ---
-language: 'en'
-title: 'Tools I use - armno.in.th'
-description: 'A collection of hardware/software/tools I use on a daily basis.'
+language: "en"
+title: "Tools I use - armno.in.th"
+description: "A collection of hardware/software/tools I use on a daily basis."
 thumbnail: /images/uses/laptop.jpg
 pubDate: 2022-06-08T07:51:22+07:00
 layout: ../../layouts/PageLayout.astro
 ---
-import Picture from '@components/Picture.astro'
+
+import Picture from "@components/Picture.astro";
 
 # Tools I use
 
@@ -34,15 +35,16 @@ hardware/software/tools they use regularly. Here are my tools, updated for 2023.
     <Picture
       src="/images/uses/dark.png"
       alt="dark terminal screenshot"
-      widths={[300,600,1200]}
-      width={600}
+      height={512}
+      width={1957}
     />
     <Picture
       src="/images/uses/light.png"
       alt="light terminal screenshot"
-      widths={[300,600,1200]}
-      width={600}
+      height={512}
+      width={1957}
     />
+
   </div>
 </div>
 
@@ -65,14 +67,15 @@ hardware/software/tools they use regularly. Here are my tools, updated for 2023.
 ## Hardware
 
 Computers: I use
+
 - [**2015, 15-inch MacBook Pro**](https://support.apple.com/kb/SP719?locale=en_US) (2.2GHz Core i7, 16GB RAM) at work
 - [**2013, 13-inch MacBook Pro**](https://support.apple.com/kb/sp691?locale=th_TH) (2.4GHz Core i5, 8GB RAM) at home
 
 <Picture
   src="/images/uses/laptop.jpg"
   alt="2015, 15-inch MacBook Pro"
-  widths={[300,600,1200]}
-  width={1600}
+height="900"
+width={1600}
 />
 
 Monitor: a [Samsung 28" UR55 UHD 4K Monitor](https://www.samsung.com/th/business/monitors/ur55/lu28r550uqexxt/) mounted with an [NB-F80 Monitor arm](https://www.google.com/search?q=nb-f80+monitor+arm).
@@ -80,8 +83,8 @@ Monitor: a [Samsung 28" UR55 UHD 4K Monitor](https://www.samsung.com/th/business
 <Picture
   src="/images/uses/desk-monitor.jpg"
   alt="Samsung UR55 4k monitor"
-  widths={[300,600,1200]}
-  width={1600}
+height={900}
+width={1600}
 />
 
 Keyboards: [Ginkgo65](https://ginkgo65.com/) 65% mechanical keyboard at work and a [custom Tofu 60% mechanical keyboard](https://armno.in.th/2019/05/01/custom-mechanical-keyboard-build-2/) at home.
@@ -92,14 +95,14 @@ Keyboards: [Ginkgo65](https://ginkgo65.com/) 65% mechanical keyboard at work and
       src="/images/uses/ginkgo65-keyboard.jpg"
       alt="my Ginkgo65 mechanical keyboard at work"
       caption="Build details: Ginkgo65 Black x Copper / Polycarbonate plate / Durock V2 stabs / C3 Tangerine 67g + Krytox 205g0 / MT3 Extended 2048 Katakana"
-      widths={[300,600,1200]}
+      height={675}
       width={1200}
     />
     <Picture
       src="/images/uses/tofu-susuwatari.jpg"
       alt="my custom 60% mechanical keyboard"
       caption="Build details: Tofu alu case / DZ60 PCB / Aluminum plate / Everglide stabs / Gateron milky brown / MT3 Susuwatari"
-      widths={[300,600,1200]}
+      height={675}
       width={1200}
     />
   </div>
@@ -119,21 +122,22 @@ Headphones: I have ~a few~ too many of them for my various use cases
     <Picture
       src="/images/uses/sony-xm4.jpg"
       alt="Sony WH-1000XM4 headphones"
-      widths={[300,600,1200]}
-      width={1200}
+      height={1125}
+      width={2000}
     />
     <Picture
       src="/images/uses/headphones.jpg"
       alt="Audio Technica M50x"
-      widths={[300,600,1200]}
-      width={1200}
+      height={785}
+      width={1400}
     />
     <Picture
       src="/images/uses/jbl-quantum-100.jpg"
       alt="JBL Quantum 100 headphones"
-      widths={[300,600,1200]}
-      width={1200}
+      height={1125}
+      width={2000}
     />
+
   </div>
 </div>
 
@@ -153,14 +157,15 @@ Not something I use everyday, but still worth mentioning.
     <Picture
       src="/images/uses/fuji-xe1.jpg"
       alt="Fujifilm XE-1"
-      widths={[300,600,1200]}
-      width={1200}
+      height={998}
+      width={1500}
     />
     <Picture
       src="/images/uses/nich-faith-2-custom-small.jpg"
       alt="Nich Faith 2 Custom"
-      widths={[300,600,1200]}
-      width={1200}
+      height={2350}
+      width={1940}
     />
+
   </div>
 </div>
